<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/view_shelters_menu_item"
            android:icon="@drawable/ic_map"
            android:title="@string/view_shelters" />
        <item
            android:id="@+id/view_pets_menu_item"
            android:icon="@drawable/ic_home"
            android:title="@string/pets_for_adoption" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/favourited_pets_menu_item"
                android:title="@string/favouited_pets" />
            <item
                android:id="@+id/saved_shelters_menu_item"
                android:title="@string/saved_shelters" />

            <item
                android:id="@+id/logout_menu_item"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>