<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password_confirm_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:autofillHints="" />

        </LinearLayout>

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/register_error_text_view"
            style="@style/TextErrorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fill_values_request"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>