<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/sign_in_button"
                    style="@style/LoginButtons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <com.dd.processbutton.iml.ActionProcessButton
                    android:id="@+id/register_button"
                    style="@style/LoginButtons"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/register"
                    app:pb_colorNormal="@color/colorAccent" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_error_text_view"
                style="@style/TextErrorStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/error_incorrect_password"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>