<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shelter_detail_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shelterdetail.ShelterDetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/Toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:paddingTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/shelter_image_height">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/map_view"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/shelter_image_height"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_margin">

                <ImageButton
                    android:id="@+id/detail_favourite_icon"
                    android:layout_width="@dimen/favourite_button_size"
                    android:layout_height="@dimen/favourite_button_size"
                    android:contentDescription="@string/favourite"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/shelter_name_text_view"
                    style="@style/TextHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/shelter_street_text_view"
                    style="@style/TextLargeBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/shelter_address_text_view"
                    style="@style/TextLargeBody"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/TextHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_label"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/shelter_phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextDetailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_label" />

                    <TextView
                        android:id="@+id/shelter_phone_text_view"
                        style="@style/TextLargeBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shelter_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TextDetailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email_label" />

                    <TextView
                        android:id="@+id/shelter_email_text_view"
                        style="@style/TextLargeBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/shelter_learn_more_button"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/visit_website" />

        <Button
            android:id="@+id/shelter_view_pets_button"
            style="@style/DefaultButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_pets_at_shelter"
            android:visibility="gone" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>